# CHART

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CHART-DDD-ONBOARDING.md  CHART-HIGH-LEVEL-MODULE-DESIGN.md  CMS-PAYLOAD-DIRECTION.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  NOTICE  README.md  docker-compose.yml  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: api.yml  app-deploy.yml  deploy-demo.yml  storybook-pages.yml  web-ui.yml
api/: .env.example  Dockerfile  drizzle.config.ts  package.json
api/drizzle/: 0000_dapper_tomorrow_man.sql  0000_misty_tempest.sql  (+11 more)
api/src/: app.ts  (+5 more)
chart-repository/: .env.example  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  payload.config.ts
docs/: architecture.md  health-input-contract.md  health-survey-column-map.csv  health-survey-exploration-guide.md
infra/: docker-compose.yml
pipelines/era5_heat/: .gitignore  README.md  pyproject.toml
pipelines/era5_heat/notebooks/: explore.ipynb  mvp_data_explorer.ipynb
pipelines/era5_heat/src/era5_heat/: __init__.py  __main__.py  aggregate.py  cds_client.py  districts.py  fixtures.py  io.py  provenance.py  viz.py
pipelines/era5_heat/tests/: test_aggregate.py  test_io.py  test_observed_outputs.py  test_presets_and_viz.py  test_provenance.py
solution-repository/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  payload.config.ts  tsconfig.json
web/: .env.example  Dockerfile  next.config.mjs  package.json  payload.config.ts  tsconfig.json
(+325 files in other folders)
