[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "era5-heat"
version = "0.1.0"
description = "ERA5 monthly Tmax + heatwave-day pipeline for a district bbox."
requires-python = ">=3.11"
dependencies = [
  "cdsapi>=0.7.4",
  "xarray>=2024.1",
  "netcdf4>=1.6",
  "pandas>=2.0",
  "numpy>=1.26",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
notebook = ["jupyterlab>=4", "ipykernel>=6", "seaborn>=0.12"]
parquet = ["pyarrow>=15.0"]

[project.scripts]
era5-heat = "era5_heat.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
